--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,14 @@
             <button class="chord-btn" data-chord="vi">vi</button>
             <button class="chord-btn" data-chord="vii°">vii°</button>
         </div>
+
+        <div id="chord-progression">
+            <h2>Chord Progression</h2>
+            <div id="progression-bar" class="drop-area"></div>
+            <button id="play-progression">Play Progression</button>
+        </div>
+        
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
