--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,15 @@
             <option value="B">B</option>
         </select>
 
+        <!-- Toggle for naming options -->
+        <div id="naming-options">
+            <label for="naming-mode">Chord Naming Mode:</label>
+            <select id="naming-mode">
+                <option value="roman">Roman Numerals</option>
+                <option value="chord">Chord Names</option>
+            </select>
+        </div>
+
         <!-- Buttons for chords -->
         <div id="chord-buttons">
             <button class="chord-btn" data-chord="I">I</button>
@@ -47,7 +56,6 @@
             <button id="play-progression">Play Progression</button>
         </div>
         
-
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
