--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,11 @@
             <div id="progression-bar" class="drop-area"></div>
             <button id="play-progression">Play Progression</button>
         </div>
+
+        <div id="chord-info">
+          <h2>Matching Songs</h2>
+          <div id="chord-info-content"></div>
+        </div>
         
     </div>
 
@@ -62,3 +67,4 @@
     <script src="/static/script.js"></script>
 </body>
 </html>
+
