app name change

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="container">
-        <h1>Music Chord Player</h1>
+        <h1>ChordExplorer</h1>
         
         <!-- Dropdown for selecting the key -->
         <label for="key-select">Select a Key:</label>
